// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button Renders Button Renders Disabled Button 1`] = `
.emotion-0 {
  width: auto;
  min-width: 85px;
  padding-top: 0.875em;
  padding-bottom: 0.875em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  font-size: 0.875rem;
  font-weight: bold;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: rgba(203, 213, 225, 1);
  background-color: transparent;
  color: rgba(203, 213, 225, 1);
  transition-property: color,background-color,box-shadow,border-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
}

.emotion-0:hover {
  color: "auto";
  background-color: transparent;
  border-color: rgba(203, 213, 225, 1);
  cursor: auto;
  box-shadow: none;
}

.emotion-0 .Ursa-ButtonIconLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-content:center align-items: center;
  gap: 0.5em;
}

.emotion-0 .UrsaIcon {
  margin: auto;
}

.emotion-0 .UrsaIcon svg {
  fill: rgba(203, 213, 225, 1);
}

<div
  className="Ursa-ButtonContainer"
>
  <button
    className="Ursa-Button emotion-0"
    disabled={true}
    role="button"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`components/Button Renders Button Renders FullWidth Button 1`] = `
.emotion-0 {
  width: 100%;
  min-width: 85px;
  padding-top: 0.875em;
  padding-bottom: 0.875em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  font-size: 0.875rem;
  font-weight: bold;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: rgba(20, 184, 166, 1);
  background-color: rgba(20, 184, 166, 1);
  color: white;
  transition-property: color,background-color,box-shadow,border-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
}

.emotion-0:hover {
  color: "auto";
  background-color: rgba(13, 148, 136, 1);
  border-color: rgba(13, 148, 136, 1);
  cursor: pointer;
  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),0px 2px 2px 0px rgb(0 0 0 / 14%),0px 1px 5px 0px rgb(0 0 0 / 12%);
}

.emotion-0 .Ursa-ButtonIconLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-content:center align-items: center;
  gap: 0.5em;
}

.emotion-0 .UrsaIcon {
  margin: auto;
}

.emotion-0 .UrsaIcon svg {
  fill: white;
}

<div
  className="Ursa-ButtonContainer"
>
  <button
    className="Ursa-Button emotion-0"
    role="button"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`components/Button Renders Button Renders IconButton Button 1`] = `
.emotion-0 {
  width: auto;
  min-width: 85px;
  padding-top: 0.875em;
  padding-bottom: 0.875em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  font-size: 0.875rem;
  font-weight: bold;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: rgba(20, 184, 166, 1);
  background-color: rgba(20, 184, 166, 1);
  color: white;
  transition-property: color,background-color,box-shadow,border-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
}

.emotion-0:hover {
  color: "auto";
  background-color: rgba(13, 148, 136, 1);
  border-color: rgba(13, 148, 136, 1);
  cursor: pointer;
  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),0px 2px 2px 0px rgb(0 0 0 / 14%),0px 1px 5px 0px rgb(0 0 0 / 12%);
}

.emotion-0 .Ursa-ButtonIconLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-content:center align-items: center;
  gap: 0.5em;
}

.emotion-0 .UrsaIcon {
  margin: auto;
}

.emotion-0 .UrsaIcon svg {
  fill: white;
}

.emotion-1 {
  display: block;
  height: 0.9375rem;
  width: 0.9375rem;
  max-height: 100%;
  max-width: 100%;
}

.emotion-1 svg {
  fill: rgba(0, 0, 0, 1);
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  background-color: none;
}

.emotion-1:hover {
  color: auto;
  background-color: auto;
}

<div
  className="Ursa-ButtonContainer"
>
  <button
    className="Ursa-Button emotion-0"
    disabled={false}
    role="button"
    type="button"
  >
    <span
      className="Ursa-ButtonIconLabel"
    >
      <span
        className="UrsaIcon emotion-1"
      >
        <img
          alt=""
          aria-hidden="true"
          className="Ursa-IconSVG"
          data-testid="icon-external"
          src="data:image/svg+xml;utf8,undefined"
        />
      </span>
       
      Home
    </span>
  </button>
</div>
`;

exports[`components/Button Renders Button Renders IconOnlyButton Button 1`] = `
.emotion-0 {
  width: auto;
  min-width: 85px;
  padding-top: 0.875em;
  padding-bottom: 0.875em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  font-size: 0.875rem;
  font-weight: bold;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: rgba(20, 184, 166, 1);
  background-color: rgba(20, 184, 166, 1);
  color: white;
  transition-property: color,background-color,box-shadow,border-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
}

.emotion-0:hover {
  color: "auto";
  background-color: rgba(13, 148, 136, 1);
  border-color: rgba(13, 148, 136, 1);
  cursor: pointer;
  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),0px 2px 2px 0px rgb(0 0 0 / 14%),0px 1px 5px 0px rgb(0 0 0 / 12%);
}

.emotion-0 .Ursa-ButtonIconLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-content:center align-items: center;
  gap: 0.5em;
}

.emotion-0 .UrsaIcon {
  margin: auto;
}

.emotion-0 .UrsaIcon svg {
  fill: white;
}

.emotion-1 {
  display: block;
  height: 0.9375rem;
  width: 0.9375rem;
  max-height: 100%;
  max-width: 100%;
}

.emotion-1 svg {
  fill: rgba(0, 0, 0, 1);
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  background-color: none;
}

.emotion-1:hover {
  color: auto;
  background-color: auto;
}

<div
  className="Ursa-ButtonContainer"
>
  <button
    className="Ursa-Button emotion-0"
    disabled={false}
    role="button"
    type="button"
  >
    <span
      className="UrsaIcon emotion-1"
    >
      <img
        alt=""
        aria-hidden="true"
        className="Ursa-IconSVG"
        data-testid="icon-external"
        src="data:image/svg+xml;utf8,undefined"
      />
    </span>
  </button>
</div>
`;

exports[`components/Button Renders Button Renders Loading Button 1`] = `
.emotion-0 {
  width: auto;
  min-width: 85px;
  padding-top: 0.875em;
  padding-bottom: 0.875em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  font-size: 0.875rem;
  font-weight: bold;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: rgba(203, 213, 225, 1);
  background-color: rgba(20, 184, 166, 1);
  color: rgba(128, 128, 128, 1);
  transition-property: color,background-color,box-shadow,border-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
}

.emotion-0:hover {
  color: "auto";
  background-color: rgba(13, 148, 136, 1);
  border-color: rgba(13, 148, 136, 1);
  cursor: pointer;
  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),0px 2px 2px 0px rgb(0 0 0 / 14%),0px 1px 5px 0px rgb(0 0 0 / 12%);
}

.emotion-0 .Ursa-ButtonIconLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-content:center align-items: center;
  gap: 0.5em;
}

.emotion-0 .UrsaIcon {
  margin: auto;
}

.emotion-0 .UrsaIcon svg {
  fill: rgba(128, 128, 128, 1);
}

.emotion-1 {
  -webkit-animation: spin 1s linear infinite;
  animation: spin 1s linear infinite;
}

<div
  className="Ursa-ButtonContainer"
>
  <button
    aria-busy={true}
    className="Ursa-Button emotion-0"
    role="button"
    type="button"
  >
    <span
      className="Ursa-Spinner"
    >
      <svg
        className="emotion-1"
        color="white"
        data-icon="spinner"
        data-testid="spinner"
        fill="white"
        height="16"
        viewBox="0 0 20 20"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.229 1.173a9.25 9.25 0 1011.655 11.412 1.25 1.25 0 10-2.4-.698 6.75 6.75 0 11-8.506-8.329 1.25 1.25 0 10-.75-2.385z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`components/Button Renders Button Tests Alert Button Renders Alert Button 1`] = `
.emotion-0 {
  width: auto;
  min-width: 85px;
  padding-top: 0.875em;
  padding-bottom: 0.875em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  font-size: 0.875rem;
  font-weight: bold;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: rgba(239, 68, 68, 1);
  background-color: rgba(239, 68, 68, 1);
  color: white;
  transition-property: color,background-color,box-shadow,border-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
}

.emotion-0:hover {
  color: "auto";
  background-color: rgba(220, 38, 38, 1);
  border-color: rgba(220, 38, 38, 1);
  cursor: pointer;
  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),0px 2px 2px 0px rgb(0 0 0 / 14%),0px 1px 5px 0px rgb(0 0 0 / 12%);
}

.emotion-0 .Ursa-ButtonIconLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-content:center align-items: center;
  gap: 0.5em;
}

.emotion-0 .UrsaIcon {
  margin: auto;
}

.emotion-0 .UrsaIcon svg {
  fill: white;
}

<div
  className="Ursa-ButtonContainer"
>
  <button
    className="Ursa-Button emotion-0"
    onClick={[Function]}
    role="button"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`components/Button Renders Button Tests Basic Button Basic Button - Snapshot Test 1`] = `
.emotion-0 {
  width: auto;
  min-width: 85px;
  padding-top: 0.875em;
  padding-bottom: 0.875em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  font-size: 0.875rem;
  font-weight: bold;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: rgba(203, 213, 225, 1);
  background-color: white;
  color: rgba(128, 128, 128, 1);
  transition-property: color,background-color,box-shadow,border-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
}

.emotion-0:hover {
  color: "auto";
  background-color: #F8F8F8;
  border-color: auto;
  cursor: pointer;
  box-shadow: none;
}

.emotion-0 .Ursa-ButtonIconLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-content:center align-items: center;
  gap: 0.5em;
}

.emotion-0 .UrsaIcon {
  margin: auto;
}

.emotion-0 .UrsaIcon svg {
  fill: rgba(128, 128, 128, 1);
}

<div
  className="Ursa-ButtonContainer"
>
  <button
    className="Ursa-Button emotion-0"
    onClick={[Function]}
    role="button"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`components/Button Renders Button Tests Outline Button Renders Outline Button 1`] = `
.emotion-0 {
  width: auto;
  min-width: 85px;
  padding-top: 0.875em;
  padding-bottom: 0.875em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  font-size: 0.875rem;
  font-weight: bold;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: rgba(20, 184, 166, 1);
  background-color: transparent;
  color: rgba(20, 184, 166, 1);
  transition-property: color,background-color,box-shadow,border-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
}

.emotion-0:hover {
  color: "auto";
  background-color: transparent;
  border-color: rgba(13, 148, 136, 1);
  cursor: pointer;
  box-shadow: none;
}

.emotion-0 .Ursa-ButtonIconLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-content:center align-items: center;
  gap: 0.5em;
}

.emotion-0 .UrsaIcon {
  margin: auto;
}

.emotion-0 .UrsaIcon svg {
  fill: rgba(20, 184, 166, 1);
}

<div
  className="Ursa-ButtonContainer"
>
  <button
    className="Ursa-Button emotion-0"
    disabled={false}
    onClick={[Function]}
    role="button"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`components/Button Renders Button Tests Primary Button Primary Button - Snapshot Test 1`] = `
.emotion-0 {
  width: auto;
  min-width: 85px;
  padding-top: 0.875em;
  padding-bottom: 0.875em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  font-size: 0.875rem;
  font-weight: bold;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: rgba(20, 184, 166, 1);
  background-color: rgba(20, 184, 166, 1);
  color: white;
  transition-property: color,background-color,box-shadow,border-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
}

.emotion-0:hover {
  color: "auto";
  background-color: rgba(13, 148, 136, 1);
  border-color: rgba(13, 148, 136, 1);
  cursor: pointer;
  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),0px 2px 2px 0px rgb(0 0 0 / 14%),0px 1px 5px 0px rgb(0 0 0 / 12%);
}

.emotion-0 .Ursa-ButtonIconLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-content:center align-items: center;
  gap: 0.5em;
}

.emotion-0 .UrsaIcon {
  margin: auto;
}

.emotion-0 .UrsaIcon svg {
  fill: white;
}

<div
  className="Ursa-ButtonContainer"
>
  <button
    className="Ursa-Button emotion-0"
    onClick={[Function]}
    role="button"
    type="button"
  >
    Button
  </button>
</div>
`;
